--- a/home.html
+++ b/home.html
@@ -3,15 +3,17 @@
 
 <head>
     <title>Ethan Pollack | Home</title>
-    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
-    </link>
+    <link rel="stylesheet" href="snake/snake.css">
+
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="snake/snake.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="center">
+    <div id="main" class="center">
         <img class="profile" src="assets/img.png" />
         <img class="name" type="vector" src="assets/full-name-red.svg">
         <div class="icons">
@@ -28,6 +30,11 @@
                 <img type="vector" src="assets/github.svg" />
                 <p>GitHub</p>
             </a>
+        </div>
+    </div>
+    <div id="snake" class="snake">
+        <div class="game">
+
         </div>
     </div>
 </body>
