Stable Snake Rendering

--- a/home.html
+++ b/home.html
@@ -32,10 +32,8 @@
             </a>
         </div>
     </div>
-    <div id="snake" class="snake">
-        <div class="game">
-
-        </div>
+    <div id="snake" class="snakeFrame">
+        <div class="game"></div>
     </div>
 </body>
 
