Stable Main Page

--- a/home.html
+++ b/home.html
@@ -32,9 +32,10 @@
             </a>
         </div>
     </div>
-    <div id="snake" class="snakeFrame">
+    <div id="snake" class="nodisp snakeFrame">
         <div class="game"></div>
     </div>
+    
 </body>
 
 </html>
