--- a/home.html
+++ b/home.html
@@ -35,7 +35,13 @@
     <div id="snake" class="nodisp snakeFrame">
         <div class="game"></div>
     </div>
-    
+    <div class="education">
+        <div></div>
+        <img class="arrows-down" src="assets/arrows-down.svg">
+        <p>Education Background</p>
+        <img class="arrows-down" src="assets/arrows-down.svg">
+        <div></div>
+    </div>
 </body>
 
 </html>
