--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
     <div class="header">
         <div class="profile"></div>    
         <img class="name" src="assets/full-name-red.svg">
+        <div class="home"></div>    
     </div>
     <div id="main" class="main">
         <div class="profile"> </div>
@@ -47,7 +48,7 @@
     <div id="frame-container" class="frame-container nodisp">
         <div class="profile"></div>
         <img class="name" type="vector" src="assets/full-name-red.svg">
-        <img id="close" class="close" src="assets/icon-x.svg" onclick="toggleFrame()" />
+        <img id="close" class="close" src="assets/icons/icon-x.svg" onclick="toggleFrame()" />
         <iframe id="frame" class="frame" src="EthanPollackResume.pdf"></iframe>
 
     </div>
