--- a/home.html
+++ b/home.html
@@ -6,52 +6,25 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="snake/snake.css">
 
-    <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="snake/snake.js"></script>
+    <script type="module" src="script.js"></script>
+    <!--script type="text/javascript" src="snake/snake.js"></script-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div id="background" class="background"> </div>
-    <div class="header">
+    <div id="header" class="header">
         <div class="profile"></div>    
         <img class="name" src="assets/full-name-red.svg">
         <div class="home"></div>    
     </div>
-    <div id="main" class="main">
-        <div class="profile"> </div>
-        <img class="name" type="vector" src="assets/full-name-red.svg">
-        <div class="bubbles">
-            <div class="bubble link" title="Click to view my resume!" onclick="toggleFrame('EthanPollackResume.pdf')">
-                Resume
-            </div>
-            <a class="bubble link" href="https://www.linkedin.com/in/ethanpollack" target="_blank"
-                title="Click to view my LinkedIn!">
-                LinkedIn
-            </a>
-            <a class="bubble link" href="https://www.github.com/epoll31" target="_blank"
-                title="Click to view my GitHub!">
-                GitHub
-            </a>
-            <div class="bubble link" onclick="toggleFrame('pages/playground.html')">Playground</div>
-            <div class="bubble link" onclick="toggleFrame('pages/macTerminal.html')">Mac Terminal Utility</div>
-            <div class="bubble nodisp">Education</div>
-            <div class="bubble nodisp">Work Experience</div>
-        </div>
-    </div>
     <div id="snake" class="nodisp snakeFrame">
         <div class="game"></div>
     </div>
-
-
-    <div id="frame-container" class="frame-container nodisp">
-        <div class="profile"></div>
-        <img class="name" type="vector" src="assets/full-name-red.svg">
-        <img id="close" class="close" src="assets/icons/icon-x.svg" onclick="toggleFrame()" />
-        <iframe id="frame" class="frame" src="EthanPollackResume.pdf"></iframe>
-
-    </div>
+    <div id="frame" class="frame"></div>
+    <!--object id="frame" class="frame" type="text/html" data="pages/main.html" ></object-->
+    <!--iframe id="frame" class="frame" src="EthanPollackResume.pdf"></iframe-->
 
 </body>
 
