--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="center">
-        <img class="profile" src="assets/img.png" />
+        <div class="profile" ></div>
         <img class="name" type="vector" src="assets/full-name-red.svg">
         <div class="icons">
             <a class="icon" href="EthanPollackResume.pdf" target="_blank" title="Click to view my resume!">
