--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="snake/snake.css">
 
     <script type="module" src="script.js"></script>
+    <script type="module" src="pageManager.ts"></script>
+    <script type="module" src="modules/pageManager.ts"></script>
     <!--script type="text/javascript" src="snake/snake.js"></script-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
